# crypt3

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rebar.config
.github/workflows/: main.yml
crates/crypt3/: Cargo.toml  build.rs
crates/crypt3/src/: lib.rs  nif.rs
priv/crates/build-script-build/0.1.0/debug/: build-script-build
rust_src/crypt3_nif/: Cargo.toml  build.rs
rust_src/crypt3_nif/src/: atoms.rs  bindings.rs  lib.rs  nif.rs
src/: crates.hrl  crypt3.app.src  crypt3.erl  crypt3_nif.erl
